tests/outref/TERR020.ref

-- TERR020 : OCTO512 : SIG-11 (instead of an error) from SELECT *

SELECT *;
[ERROR] PATH:LINENUM DATE TIME : ERR_SELECT_STAR_NO_TABLES : SELECT * with no tables specified is not valid
Error with syntax near (line 1, column 8):

SELECT *;
       ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT *;

